<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netodologia.myapplication.MainActivity">

    <item
        android:id="@+id/action_first"
        android:orderInCategory="100"
        android:title="@string/first"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_skull"
        android:orderInCategory="100"
        android:title="@string/skull"
        app:showAsAction="never" />

    <item
        android:id="@+id/spinner"
        android:orderInCategory="100"
        android:title="@string/spinner"
        app:showAsAction="never" />

    <item
        android:id="@+id/checkboxes"
        android:orderInCategory="100"
        android:title="@string/checkboxes"
        app:showAsAction="never" />

    <item
        android:id="@+id/calendar"
        android:orderInCategory="100"
        android:title="@string/calendar"
        app:showAsAction="never" />

    <item
        android:id="@+id/edit_group"
        android:orderInCategory="100"
        android:title="@string/editgroup"
        app:showAsAction="never" />
    <item
        android:id="@+id/photo"
        android:orderInCategory="100"
        android:title="@string/photo"
        app:showAsAction="never" />
</menu>